# hueta

./: .gitignore  Dockerfile  dist.env  docker-compose.yml  pyproject.toml  requirements.txt  text.txt
config/: bot.yaml  logging.yaml
src/hueta/: bot.py  bot_config.py  config.py  di.py
src/hueta/application/common/: interactor.py
src/hueta/infrastructure/logging/: __init__.py
src/hueta/infrastructure/persistence/: persistence_config.py  transaction_manager.py
src/hueta/presentation/dialogs/widgets/: __init__.py  pagination_pager.py
src/hueta/presentation/handlers/: __init__.py  main.py
src/hueta/presentation/middlewares/: bot_request_logger_middleware.py  telegram_event_logger_middleware.py
src/hueta_bot/: bot.py  config.py  di.py
src/hueta_bot/application/ports/persistence/: transaction_manager.py
src/hueta_bot/infrastructure/logging/: __init__.py  logging_config.py
src/hueta_bot/infrastructure/persistence/: persistence_config.py  transaction_manager.py
src/hueta_bot/main/: bot.py  config.py  di.py
src/hueta_bot/presentation/dialogs/widgets/: calendar.py  cancel.py  tab.py
src/hueta_bot/presentation/handlers/: __init__.py
src/hueta_bot/presentation/middlewares/: __init__.py  bot_request_logger_middleware.py  telegram_event_logger_middleware.py
