[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "hueta_bot"
version = "0.1.0"
description = ""
authors = [{ name = "SLEZ DOM", email = "example@gmail.com" }]
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.18.0",
    "aiogram_dialog==2.3.1",
    "aiohappyeyeballs==2.5.0",
    "aiohttp==3.11.13",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "attrs==25.1.0",
    "babel==2.17.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "colorama==0.4.6",
    "colored==2.3.0",
    "colorlog==6.9.0",
    "dishka==1.4.2",
    "frozenlist==1.5.0",
    "greenlet==3.1.1",
    "idna==3.10",
    "Jinja2==3.1.6",
    "magic-filter==1.0.12",
    "MarkupSafe==3.0.2",
    "multidict==6.1.0",
    "propcache==0.3.0",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "PyYAML==6.0.2",
    "redis==5.2.1",
    "SQLAlchemy==2.0.38",
    "typing_extensions==4.12.2",
    "yarl==1.18.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry.scripts]
hueta-bot = "hueta_bot.main.bot:main"
